fix: Change Logo, navbar bg and hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark;
 }
@@ -12,7 +13,9 @@ body,
   margin: 0;
   min-height: 100%;
   overflow-x: hidden;
+  scrollbar-width: none;
 }
+
 
 :root {
   color-scheme: only light;
